RESOLVED FIXED69741
Missing m_notificationPresenter initialization in WorkerThread constructor
https://bugs.webkit.org/show_bug.cgi?id=69741
Summary Missing m_notificationPresenter initialization in WorkerThread constructor
Yury Semikhatsky
Reported 2011-10-09 23:31:50 PDT
m_notificationPresenter is not initialized in WorkerThread constructor.
Attachments
Patch (1.41 KB, patch)
2011-10-09 23:37 PDT, Yury Semikhatsky
pfeldman: review+
Yury Semikhatsky
Comment 1 2011-10-09 23:37:03 PDT
Yury Semikhatsky
Comment 2 2011-10-10 00:15:23 PDT
Note You need to log in before you can comment on or make changes to this bug.