Missing m_notificationPresenter initialization in WorkerThread constructor https://bugs.webkit.org/show_bug.cgi?id=69741

Added missing m_notificationPresenter(0)

Reviewed by Pavel Feldman.

* workers/WorkerThread.cpp:
(WebCore::WorkerThread::WorkerThread):

Canonical link: https://commits.webkit.org/85789@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97044 268f45cc-cd09-0410-ab3c-d52691b4dbfc